--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "daisyui": "^5.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-draggable": "^4.4.6",
     "react-router-dom": "^7.2.0",
     "tailwindcss": "^4.0.11"
   },
