--- a/package.json
+++ b/package.json
@@ -11,14 +11,17 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.11",
+    "animate.css": "^4.1.1",
     "animejs": "^3.2.2",
     "daisyui": "^5.0.0",
+    "framer-motion": "^12.4.10",
     "lottie-react": "^2.4.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-draggable": "^4.4.6",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.2.0",
+    "react-scroll": "^1.9.3",
     "tailwindcss": "^4.0.11"
   },
   "devDependencies": {
