Fixing image rendering issues when deployed

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "animejs": "^3.2.2",
     "daisyui": "^5.0.0",
     "framer-motion": "^12.4.10",
+    "fs-extra": "^11.3.0",
     "lottie-react": "^2.4.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
