--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/drei": "^10.0.4",
+    "@react-three/fiber": "^9.1.0",
     "@tailwindcss/vite": "^4.0.11",
     "animate.css": "^4.1.1",
     "animejs": "^3.2.2",
     "daisyui": "^5.0.0",
     "framer-motion": "^12.4.10",
+    "gsap": "^3.12.7",
     "lottie-react": "^2.4.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -22,7 +25,8 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.2.0",
     "react-scroll": "^1.9.3",
-    "tailwindcss": "^4.0.11"
+    "tailwindcss": "^4.0.11",
+    "three": "^0.174.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
